--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,11 +1,20 @@
-
+<h1>Listing Movies</h1>
 <ul>
-<%= @movies.each do |movie| %>
+  <% @movies.each do |movie| %>
  <div>
+    <div>
+      <div>
+        <img src="<%= movie.image_url %>" alt="<%= movie.title %>">
+      </div>
       <li class="list-group-item"><strong><%= movie.title %></strong></li>
-      <li class="list-group-item mb-4"><em><%= movie.title %></em>
-      <li class="list-group-item mb-4"><em><%= movie.summary %></em>
-      <li class="list-group-item mb-4"><em><%= movie.actors %></em>
-  <div>
-<% end %>
+      <li class="list-group-item"><em><p>Summary:</p><%= movie.summary %></em></li>
+    <div>
+      <div><%= link_to "Details", movie_path(movie), class: 'btn btn-primary' %></div>
+  <% end %>
+  </div>
 </ul>
+
+
+<div class="text-center">
+  <%= link_to "Mes Likes", likes_path, class: "btn btn-primary" %>
+</div>
