--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -1,17 +1,19 @@
-<h1>My Likes</h1>
+<h1 class="text-center my-4">My Likes</h1>
 
-<ul>
+<ul class="list-unstyled">
   <% @likes.each do |like| %>
-    <li>
-      <strong>Movie:</strong> <%= like.movie.title %><br>
-      <div>
-        <%= cl_image_tag like.movie.photo.key, height: 300, width: 400, crop: :fill %>
+    <li class="text-center mb-4">
+      <h2 class="mt-3 mb-2" style="padding-bottom: 5px;"><%= like.movie.title %></h2>
+      <div class="d-flex justify-content-center">
+        <%= cl_image_tag like.movie.photo.key, height: 300, width: 400, crop: :fill, class: 'img-fluid rounded' %>
       </div>
       <%= link_to "Unlike", like_path(like), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
-          class: 'btn btn-warning ml-2 mb-4'%>
+          class: 'btn btn-warning mt-3'%>
     </li>
     <hr>
   <% end %>
 </ul>
 
-<div><%= link_to "Back", movies_path, class: 'btn btn-primary' %></div>
+<div class="d-flex justify-content-center mt-3">
+  <%= link_to "Back", movies_path, class: 'btn btn-primary mb-4' %>
+</div>
